<resources>
    <string name="app_name">Chelesme</string>
    <string name="title_activity_list_lan">ListLan</string>

    <!-- language dashboard -->
    <string name="persion">فارسی</string>
    <string name="english">English</string>
    <string name="Arabic">عربی</string>
    <string name="deutschland">Deutschland</string>
    <string name="fran_aise">Française</string>
    <string name="Chinees">中国</string>


    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="six">six</string>
    <string name="seven">seven</string>
    <string name="nine">nine</string>
    <string name="eigth">eigth</string>
    <string name="ten">ten</string>


</resources>
